Sweep 8 - add z-index to fixed nav so it plays nice - Adding Home link to all pages apart from home - Adding Contact link - slight template rework to accommodate other footer

--- a/source/stylesheets/noble/partials/_globals.scss
+++ b/source/stylesheets/noble/partials/_globals.scss
@@ -1,6 +1,6 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 $how-it-works-icons: ('introduction', 'import', 'algorithms', 'seed-library', 'valence', 'analytics', 'best-performer');
-$primary-nav-links: ('products', 'how-it-works', 'careers', 'our-story', 'about');
+$primary-nav-links: ('home', 'products', 'how-it-works', 'careers', 'our-story', 'about', 'contact');
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
